[tool.poetry]
name = "wagtail_tenants"
version = "0.1.3"
description = "Adds multitenancy based on django_tenants to wagtail cms"
authors = ["Boris Brue <boris@zuckersalzundpfeffer.de>"]
license = "MIT"
readme = "README.md"
homepage = "https://wagtail-tenants.readthedocs.io/en/latest/"
repository = "https://github.com/borisbrue/wagtail-tenants"

[tool.poetry.dependencies]
python = "^3.6.2"
django-tenants = "^3.3.4"
myst-parser = "^0.15.2"
sphinx-rtd-theme = "^1.0.0"
psycopg2 = "^2.9.2"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
flake8 = "^4.0.1"
sphinx = {version = "^3", optional = true}
wagtail = "^2.15.1"
isort = "^5.10.1"
flake8-black = "^0.2.3"
pytest-django = "^4.5.2"
tox = "^3.24.4"
pytest-xdist = "^2.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
docs = ["sphinx"]